<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mine_icon_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x400"
        android:background="@mipmap/head"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginTop="@dimen/x80"
        android:layout_marginRight="@dimen/x80"
        android:background="@drawable/gray_white_90"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/x40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            android:background="@mipmap/denglu" />

        <EditText
            android:id="@+id/edtTxt_yzm_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x64"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img1"
            android:background="@null"
            android:hint="@string/login_username_hint"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="@dimen/x30"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@color/color_333"
            android:textColorHint="#CCCCCC"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textSize="@dimen/x32" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginTop="@dimen/x30"
        android:layout_marginRight="@dimen/x80"
        android:background="@drawable/gray_white_90"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/x40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            android:background="@mipmap/qrmm" />

        <EditText
            android:id="@+id/edtTxt_password_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x64"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img2"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/x30"
            android:singleLine="true"
            android:textColor="@color/color_333"
            android:textColorHint="#CCCCCC"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textSize="@dimen/x30" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x40">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x60"
            android:layout_marginLeft="@dimen/x140"
            android:text="@string/user_register"
            android:textColor="@color/color_666"
            android:textSize="@dimen/x24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x60"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/x90"
            android:layout_marginRight="@dimen/x140"
            android:gravity="right"
            android:text="@string/user_forget"
            android:textColor="@color/color_666"
            android:textSize="@dimen/x24"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_srue"
        style="@style/bottom_button_style"
        android:layout_height="@dimen/x70"
        android:layout_below="@+id/inputEdit_phone"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/x190"
        android:layout_marginTop="@dimen/x50"
        android:layout_marginRight="@dimen/x190"
        android:background="@drawable/button_circle90"
        android:text="登录" />

    <RadioGroup
        android:id="@+id/login_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x40"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/login_rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue_079EEB"
            android:checked="true"
            android:text="驾驶员" />

        <RadioButton
            android:id="@+id/login_rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue_079EEB"
            android:text="车主" />

        <RadioButton
            android:id="@+id/login_rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue_079EEB"
            android:text="企业" />
    </RadioGroup>


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x60"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x150"
        android:text="版本号"
        android:textColor="@color/blue_079EEB"
        android:textSize="@dimen/x24"
        android:textStyle="bold" />
</LinearLayout>